--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { "Default": "insync.db" },
-  "DBProvider": "SQLITE"
+  "DBProvider": "SQLITE",
+  "DBName": "",
+  "AdminKey": "",
+  "DBServerVersion": "",
+  "CosmosDBName": ""
 }
 
