--- a/inSync.Api/inSync.Api.csproj
+++ b/inSync.Api/inSync.Api.csproj
@@ -26,6 +26,13 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.1" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="AutoMapper.Collection.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
+    <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,9 +47,39 @@
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Data\" />
     <None Remove="Microsoft.EntityFrameworkCore.Cosmos" />
+    <None Remove="MediatR" />
+    <None Remove="MediatR.Extensions.Microsoft.DependencyInjection" />
+    <None Remove="AutoMapper" />
+    <None Remove="AutoMapper.Collection.EntityFrameworkCore" />
+    <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
+    <None Remove="Queries\" />
+    <None Remove="Commands\" />
+    <None Remove="Validation\" />
+    <None Remove="Registration\" />
+    <None Remove="Scrutor" />
+    <None Remove="Scrutor.AspNetCore" />
+    <None Remove="Utils\" />
+    <None Remove="Filters\" />
+    <None Remove="Models\" />
+    <None Remove="Models\Responses\" />
+    <None Remove="Models\Dtos\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
+    <Folder Include="Queries\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Validation\" />
+    <Folder Include="Registration\" />
+    <Folder Include="Utils\" />
+    <Folder Include="Filters\" />
+    <Folder Include="Models\" />
+    <Folder Include="Models\Responses\" />
+    <Folder Include="Models\Dtos\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\inSync.Core\inSync.Core.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
