--- a/inSync.Api/inSync.Api.csproj
+++ b/inSync.Api/inSync.Api.csproj
@@ -52,8 +52,6 @@
     <None Remove="AutoMapper" />
     <None Remove="AutoMapper.Collection.EntityFrameworkCore" />
     <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
-    <None Remove="Queries\" />
-    <None Remove="Commands\" />
     <None Remove="Validation\" />
     <None Remove="Registration\" />
     <None Remove="Scrutor" />
@@ -61,21 +59,25 @@
     <None Remove="Utils\" />
     <None Remove="Filters\" />
     <None Remove="Models\" />
-    <None Remove="Models\Responses\" />
     <None Remove="Models\Dtos\" />
+    <None Remove="Domain\" />
+    <None Remove="Domain\Commands\" />
+    <None Remove="Domain\Queries\" />
+    <None Remove="Domain\Validations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
-    <Folder Include="Queries\" />
-    <Folder Include="Commands\" />
     <Folder Include="Validation\" />
     <Folder Include="Registration\" />
     <Folder Include="Utils\" />
     <Folder Include="Filters\" />
     <Folder Include="Models\" />
-    <Folder Include="Models\Responses\" />
     <Folder Include="Models\Dtos\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Domain\Commands\" />
+    <Folder Include="Domain\Queries\" />
+    <Folder Include="Domain\Validations\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\inSync.Core\inSync.Core.csproj">
