build: populate example settings

--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "Default": "insync.db" },
+  "ConnectionStrings": { "Default": "Data Source=insync.db;" },
   "DBProvider": "SQLITE",
-  "DBName": "",
-  "AdminKey": "",
-  "DBServerVersion": "",
-  "CosmosDBName": ""
+  "DBName": "inSync",
+  "AdminKey": "12345",
+  "DBServerVersion": "8.0.31",
+  "CosmosDBName": "inSync"
 }
 
