feat: add react app

--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -2,14 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { "Default": "Data Source=insync.db;" },
   "DBProvider": "SQLITE",
   "DBName": "inSync",
-  "AdminKey": "12345",
+  "AdminKey": "ADMIN_KEY",
   "DBServerVersion": "8.0.31",
   "CosmosDBName": "inSync"
 }
