--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -3,11 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "Default": "Data Source=insync.db;" },
+  "ConnectionStrings": {
+    "Default": "Data Source=insync.db;"
+  },
   "DBProvider": "SQLITE",
   "DBName": "inSync",
   "AdminKey": "ADMIN_KEY",
