--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -14,6 +14,7 @@
   "DBName": "inSync",
   "AdminKey": "ADMIN_KEY",
   "DBServerVersion": "8.0.31",
-  "CosmosDBName": "inSync"
+  "CosmosDBName": "inSync",
+  "Frontend": "http://localhost:3000"
 }
 
