--- a/inSync.Web/package.json
+++ b/inSync.Web/package.json
@@ -12,12 +12,13 @@
     "@tabler/icons": "^1.118.0",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-router": "0.0.1-beta.38",
+    "@tanstack/react-router-devtools": "0.0.1-beta.36",
     "antd": "^5.1.1",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
-    "jotai": "^1.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
