--- a/inSync.Api/appsettings.json
+++ b/inSync.Api/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=insync.db;"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=inSync;Integrated Security=true;"
   },
-  "DBProvider": "SQLITE",
+  "DBProvider": "MSSQL",
   "DBName": "inSync",
   "AdminKey": "ADMIN_KEY",
   "DBServerVersion": "8.0.31",
