--- a/inSync.Web/package.json
+++ b/inSync.Web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@tabler/icons": "^1.118.0",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-router": "0.0.1-beta.38",
